Select button container and style layout Select the .buttons class as a flex container with with wrapping enabled and center container elements. Add gaps and padding to evenly space buttons and ensure layout is flexible.

--- a/style.css
+++ b/style.css
@@ -44,6 +44,16 @@ html, body {
     border: none;
 }
 
+button{
+    width: 80px;
+    height: 80px;
+    border-radius: 15px;
+    text-align: center;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+}
+
 .buttons{
     display: flex;
     flex-wrap: wrap;
@@ -51,3 +61,4 @@ html, body {
     gap: 10px;
     padding: 5px;
 }
+
